# ros-mcp-client

./: README.md  clone_metrics.csv  pyproject.toml
.github/workflows/: clone-metrics.yml  download-metrics.yml  github-app.yml  ruff.yml  view-metrics.yml
.metrics/: clone_metrics.csv  daily_clone_metrics.csv  daily_view_metrics.csv  download_metrics.csv  rolling_14d_clone_metrics.csv  rolling_14d_view_metrics.csv  total_download_metrics.csv  view_metrics.csv
clients/gemini_live/: README.md  __init__.py  gemini_client.py  mcp.json  mcp_config.json  setup_gemini_client.sh
clients/nvidia_nemo/: README.md
clients/nvidia_nemo/configs/: config-mcp-client.yml
clients/nvidia_nemo/scripts/: client_base.py  utils.py
scripts/: __init__.py  setup_gemini_client.sh
